# nexibot

./: .containerignore  .detect-secrets.cfg  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  GAPS.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  nexibot-connect  quick-install.ps1  quick-install.sh
cli/: Cargo.toml  README.md
cli/src/: client.rs  config.rs  error.rs  main.rs  output.rs  utils.rs
cli/src/commands/: agent.rs  auth.rs  batch.rs  chat.rs  completion.rs  config.rs  help.rs  memory.rs  mod.rs  security.rs  session.rs  skills.rs  status.rs  voice.rs
k2k-common/: Cargo.toml
k2k-common/src/: client.rs  jwt.rs  lib.rs  models.rs
src-tauri/: .gitignore  Cargo.toml  Info.plist  TESTING.md  build.rs  bundle-bridge.js  entitlements.plist  tauri.conf.aarch64.json  tauri.conf.json  tauri.conf.windows.json  tauri.conf.x86_64.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/bundled-skills/api-tester/: SKILL.md
src-tauri/resources/bundled-skills/atlassian/: SKILL.md
src-tauri/resources/bundled-skills/clickup/: SKILL.md
src-tauri/resources/bundled-skills/code-review/: SKILL.md
src-tauri/resources/bundled-skills/creative-writer/: SKILL.md
src-tauri/resources/bundled-skills/data-analyst/: SKILL.md
src-tauri/resources/bundled-skills/debugging-assistant/: SKILL.md
src-tauri/resources/bundled-skills/email-writer/: SKILL.md
src-tauri/resources/bundled-skills/git-helper/: SKILL.md
src-tauri/resources/bundled-skills/google-workspace/: SKILL.md
src-tauri/resources/bundled-skills/meeting-notes/: SKILL.md
src-tauri/resources/bundled-skills/microsoft365/: SKILL.md
src-tauri/resources/bundled-skills/monday/: SKILL.md
src-tauri/resources/bundled-skills/project-planner/: SKILL.md
src-tauri/resources/bundled-skills/salesforce/: SKILL.md
src-tauri/resources/bundled-skills/servicenow/: SKILL.md
src-tauri/resources/bundled-skills/shell-expert/: SKILL.md
src-tauri/resources/bundled-skills/study-helper/: SKILL.md
src-tauri/resources/bundled-skills/summarizer/: SKILL.md
src-tauri/resources/bundled-skills/translator/: SKILL.md
src-tauri/resources/bundled-skills/web-researcher/: SKILL.md
src-tauri/resources/bundled-skills/writing-editor/: SKILL.md
src-tauri/soul/: default-soul.md
src-tauri/src/: agent.rs  agent_control.rs  agent_team.rs  agent_workspace.rs  api_server.rs  bluebubbles.rs  bridge.rs  browser.rs  channel.rs  circuit_breaker.rs  claude.rs  clawhub.rs  computer_use.rs  config.rs  context_manager.rs  cost_tracker.rs  dashboard.rs  db_maintenance.rs  discord.rs  email.rs  family_mode.rs  git_context.rs  gmail.rs  google_chat.rs  guardrails.rs  headless.rs  heartbeat.rs  hooks.rs  instagram.rs  k2k_client.rs  key_rotation.rs  lib.rs  line.rs  llm_provider.rs  logging.rs  main.rs  managed_policy.rs  managed_policy_stub.rs  mastodon.rs  matrix.rs  (+51 more)
src-tauri/src/agent_engine/: capability_dispatch.rs  mod.rs  planner.rs  workflow_executor.rs  workflow_spec.rs
src-tauri/src/canvas/: mod.rs  protocol.rs  renderer.rs
src-tauri/src/commands/: agent_cmds.rs  agent_control_cmds.rs  audit_cmds.rs  autonomous_agent_cmds.rs  autonomous_cmds.rs  bridge.rs  chat.rs  clawhub_cmds.rs  cli_audit.rs  computer_use_cmds.rs  config_cmds.rs  connector_cmds.rs  credential_cmds.rs  dag_cmds.rs  dashboard_cmds.rs  db_maintenance_cmds.rs  defense.rs  execute_tool.rs  family_mode_cmds.rs  fetch_tool.rs  filesystem_tool.rs  gated_shell_cmds.rs  guardrails_cmds.rs  heartbeat.rs  interactive_tool.rs  k2k_cmds.rs  key_rotation_cmds.rs  key_vault_cmds.rs  log_cmds.rs  managed_policy_cmds.rs  mcp_cmds.rs  memory.rs  memory_advanced_cmds.rs  memory_tool.rs  mod.rs  oauth.rs  observability.rs  pairing_cmds.rs  scheduler_cmds.rs  search_tool.rs  (+15 more)
src-tauri/src/config/: agents.rs  autonomy.rs  channels.rs  core.rs  mcp.rs  providers.rs  routing.rs  shell.rs  tools.rs  voice.rs  webhooks.rs
src-tauri/src/dag/: executor.rs  mod.rs  store.rs
src-tauri/src/defense/: deberta.rs  llama_guard.rs  mod.rs
src-tauri/src/embeddings/: mod.rs
src-tauri/src/gated_shell/: audit.rs  discovery.rs  filter.rs  mod.rs  plugin.rs  plugin_host.rs  policy.rs  recorder.rs  session.rs  tmux_bridge.rs
src-tauri/src/gateway/: admin.rs  auth.rs  method_scopes.rs  metrics.rs  mod.rs  protocol.rs  session_mgr.rs  ws_server.rs
src-tauri/src/memory_store/: hybrid_search.rs  mod.rs  query_expander.rs  reranker.rs  sqlite_store.rs
src-tauri/src/mobile/: api.rs  mod.rs  push.rs
src-tauri/src/platform/: file_security.rs  linux_bridge.rs  macos_bridge.rs  mod.rs  speech_bridge.swift  windows_bridge.rs
src-tauri/src/plugins/: loader.rs  mod.rs  registry.rs  trait_def.rs
src-tauri/src/providers/: anthropic.rs  auth_profiles.rs  cerebras.rs  conversation.rs  google.rs  mod.rs  model_router.rs  ollama.rs  openai_compat.rs  system_prompt.rs
src-tauri/src/sandbox/: docker.rs  mod.rs  policy.rs  validate.rs
src-tauri/src/security/: audit.rs  constant_time.rs  credentials.rs  dangerous_tools.rs  env_sanitize.rs  exec_approval.rs  external_content.rs  key_interceptor.rs  key_vault.rs  llm_classifier.rs  log_redactor.rs  merge_safety.rs  mod.rs  network_policy.rs  path_validation.rs  rate_limit.rs  safe_bins.rs  session_encryption.rs  skill_scanner.rs  ssrf.rs  tool_audit.rs  tool_policy.rs  workspace.rs
src-tauri/src/skill_format_adapters/: claude.rs  codex.rs  mod.rs  openclaw.rs
src-tauri/src/tools/: file_edit.rs  file_read.rs  file_read_state.rs  mod.rs  notebook_edit.rs  plan_mode.rs  send_message.rs  tasks.rs  worktree.rs
src-tauri/src/tools/lsp/: client.rs  formatters.rs  mod.rs  (+1 more)
src-tauri/src/voice/: audio.rs  language.rs  mod.rs  preprocessing.rs  vad.rs  wakeword.rs
src-tauri/tests/: channel_security_tests.rs  config_interception_tests.rs  dashboard_tests.rs  db_maintenance_tests.rs  e2e_scenarios.rs  family_mode_tests.rs  integration_tests.rs  key_rotation_tests.rs  key_vault_pipeline_tests.rs  memory_advanced_tests.rs  test_utils.rs
(+223 files in other folders)
