[package]
name = "nexibot-cli"
version = "0.1.0"
edition = "2021"
description = "Comprehensive command-line interface for NexiBot"
license = "Apache-2.0"
authors = ["Jared Cluff"]

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "cargo"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File I/O
fs4 = "0.8"  # File locking for safe concurrent access
dirs = "5"

# Pretty output
colored = "2"
regex = "1"


# Config file parsing
toml = "0.8"
serde_yaml = "0.9"

[[bin]]
name = "nexibot"
path = "src/main.rs"
