[package]
name = "k2k-common"
version = "0.1.0"
edition = "2021"
description = "Shared K2K protocol models and utilities"
license = "Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT
jsonwebtoken = "9"
rsa = "0.9"
pem = "3.0"
base64 = "0.22"

# Crypto
sha2 = { version = "0.10", features = ["oid"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client (for K2K queries)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Random number generation (for keypair generation)
rand = "0.8"
